# loic

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml.default  docker-compose.yml
src/: common.rs  main.rs
src/api/: mod.rs
src/front/: mod.rs
src/oauth/: mod.rs
static/: ion-sdk.min.js  json-rpc.min.js
templates/: header.stpl  index.stpl  index_logged_in.stpl  login.stpl  navbar.stpl  stream.stpl  template.stpl  watch.stpl
